# discord-pricebot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
src/: main.rs
